# nav_serial

./: CMakeLists.txt  README.md  package.xml
.cache/clangd/index/: crc.hpp.DC4F9BA81EEC5482.idx  fixed_packet.hpp.2D8CF7A3A8E79E86.idx  fixed_packet_tool.hpp.E785D68E412BCD12.idx  packet_protocol.hpp.35A2C7812877CBE6.idx  serial_driver.cpp.EAA27F9416F7CD45.idx  serial_driver.hpp.E2B45813C87BEDA0.idx  serial_driver_node.cpp.ADA48CFD3C90ADC2.idx  serial_driver_node.cpp.ADE7965CC500A3AF.idx  serial_driver_node.hpp.965B532B0EB9D362.idx  transporter_interface.hpp.A877368F6668FDC7.idx  uart_transporter.cpp.4644BB729B7FC2FF.idx  uart_transporter.hpp.71E44BBA680F5DEC.idx
config/: serial_driver.yaml
include/nav_serial/: crc.hpp  transporter_interface.hpp  uart_transporter.hpp
include/nav_serial/driver/: serial_driver.hpp
include/nav_serial/protocol/: packet_protocol.hpp
include/nav_serial/ros/: serial_driver_node.hpp
launch/: serial_driver.launch.py  serial_driver_debug.launch.py
scripts/: check_serial_devices.py  quick_check_crc.py  setup_color_output.sh  setup_serial_permission.sh  test_cmd_vel.py  test_serial_loopback.py  verify_crc.py
src/driver/: serial_driver.cpp
src/ros/: serial_driver_node.cpp
src/transporter_driver/: uart_transporter.cpp
